Added favicon, deleted unnecessary files, and added a github action for tests
